--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "core-js": "^3.6.5",
+    "socket.io-client": "^4.1.2",
     "vue": "^3.0.0",
     "vue-material-design-icons": "^4.11.0"
   },
@@ -44,5 +45,17 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TofuSupreme/chatapp_vue.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TofuSupreme/chatapp_vue/issues"
+  },
+  "homepage": "https://github.com/TofuSupreme/chatapp_vue#readme"
 }
