--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "socket.io-client": "^4.1.2",
     "vue": "^3.0.0",
